test/arrays/bradc/noelemtype.good
test/arrays/bradc/noelemtype.chpl:5 ERROR: syntax error
yytext is: =
